[package]
name = "fake-wepoll-binding"
version = "0.0.1"
authors = ["Thomas Kühnel <kuehnelth@gmail.com>"]
edition = "2018"
description = "Safe bindings to epoll that look like wepoll-binding"
repository = "https://github.com/kuehnelth/fake-wepoll-binding"
readme = "README.md"
license = "MPL-2.0"
keywords = ["epoll", "poll", "linux"]
categories = ["api-bindings", "os::linux-apis"]


[dependencies]
bitflags = "^1.0"
libc = "0.2"
